# workshop

./: .coverage  Dockerfile  README.md  coverage.xml  pyproject.toml  run.sh
.github/workflows/: ci-cd.yml
app/: main.py
tests/: test_main.py
